--- a/main.html
+++ b/main.html
@@ -7,6 +7,33 @@
 </head>
 
 <body>
+	<table>
+		<tr>
+		<th>Roll numbers
+	
+		
+		<th>Names
+		</th></tr>
+		<tr>
+			<td>1</td>
+			<td>Vansh</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Aamir</td>
+		</tr>
+	</table>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="picture">
+		</li>
+		<li>
+			<img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="picture">
+		</li>
+		<li>
+			<img src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="pic">
+		</li>
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
