--- a/main.html
+++ b/main.html
@@ -28,10 +28,10 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="picture">
 		</li>
 		<li>
-			<img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="picture">
+			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
 		</li>
 		<li>
-			<img src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="pic">
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
 		</li>
 	</ol>
 	<!-- the entire body must be written by student -->
