--- a/main.html
+++ b/main.html
@@ -23,6 +23,7 @@
 			<td>Aamir</td>
 		</tr>
 	</table>
+	<h3>List of medias</h3>
 	<ol>
 		<li>
 			<img src="https://picsum.photos/id/123/200/300" alt="picture">
