--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="picture">
 		</li>
 		<li>
-			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">controls</video>
+			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
 		</li>
 		<li>
 			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
