--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
 		</li>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
 		</li>
 	</ol>
 	<!-- the entire body must be written by student -->
