--- a/main.html
+++ b/main.html
@@ -8,12 +8,13 @@
 
 <body>
 	<table>
-		<tr>
-		<th>Roll numbers
+		<thead><th>Roll numbers
 	
 		
 		<th>Names
-		</th></tr>
+		</th></thead>
+		
+		
 		<tr>
 			<td>1</td>
 			<td>Vansh</td>
